Se agrega color degradado a la cabezera

--- a/estilos.css
+++ b/estilos.css
@@ -30,9 +30,12 @@ body{
     background: white;
 }
 .cabezera{
-    background:#0a75ad;
+    background: #159957;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #155799, #159957);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #155799, #159957); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     border: 1px solid black;
     padding: 20px;
+    color: white;
 }
 .cabezera h1{
     text-align: left;
