Cambio de Fondo del sitio WEB

--- a/estilos.css
+++ b/estilos.css
@@ -3,7 +3,10 @@
     padding: 0;
 }
 .cuerpo{
-    background: #f3ba00;
+    background: #FDFC47;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to bottom, #24FE41, #FDFC47);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to bottom, #24FE41, #FDFC47); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 h1{
     font-size: 20px;
