mejora de estilos de articulos y columna aside

--- a/estilos.css
+++ b/estilos.css
@@ -59,7 +59,6 @@ body{
 }
 article{
     background: #e6e6fa;
-    border: 1px solid black;
     padding: 20px;
     margin-bottom: 15px;
 
@@ -67,6 +66,12 @@ article{
 time{
     color: #999;
     text-align: right;
+}
+footer{
+    background: white;
+    padding-top:5px;
+    padding-bottom: 5px;
+    border: 1px solid black;
 }
 article footer{
     text-align: right;
@@ -85,6 +90,7 @@ article img{
     float: left;
 }
 .columna{
+    background: burlywood;
     margin: 20px 0;
     width: 27%;
     float: left;
