--- a/estilos.css
+++ b/estilos.css
@@ -125,3 +125,11 @@ p{
     height: 400px;
     border: 3px solid red;
 }
+.descripcion{
+    text-align: justify;
+    font-family: sans-serif;
+    font-weight:lighter;
+    font-size: 15px;
+    margin-top: 0px;
+    padding-top: 0px;
+}
