--- a/estilos.css
+++ b/estilos.css
@@ -96,16 +96,27 @@ article img{
     float: left;
 }
 .columna{
-    background: burlywood;
+    background: #e6e6fa;
     margin: 20px 0;
     width: 27%;
     float: left;
 }
 .columna blockquote{
     border: 1px solid black;
-    background: #3498db;
+    background: #062074;
     padding: 20px;
-    margin-bottom: 20px;
+    margin-left: 5px;
+    margin-right:5px;
+    margin-bottom: 5px;
+    color:white;
+    text-align: center;
+    font-family: sans-serif;
+    font-weight:lighter;
+    font-size: 15px;
+}
+.foto_autor{
+    width:120px;
+    height:120px;
 }
 .columna h1{
     text-align: center;
