--- a/estilos.css
+++ b/estilos.css
@@ -32,9 +32,8 @@ body{
     text-align: center;
 }
 .agrupar{
-    border: 1px solid black;
     width: 960px;
-    margin: 1px auto;
+    margin: 0px auto;
     padding: 0px;
     background: white;
 }
@@ -42,7 +41,6 @@ body{
     background: #159957;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #155799, #159957);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #155799, #159957); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    border: 1px solid black;
     padding: 20px;
     color: white;
 }
@@ -51,7 +49,6 @@ body{
 }
 .menu{
     background: #071d49;
-    border: 1px solid black;
     padding: 5px 15px;
     color: white;
     text-align: left;
@@ -77,7 +74,6 @@ footer{
     background: white;
     padding-top:5px;
     padding-bottom: 5px;
-    border: 1px solid black;
 }
 article footer{
     text-align: right;
@@ -117,6 +113,7 @@ article img{
 .foto_autor{
     width:120px;
     height:120px;
+    border:2px solid white;
 }
 .columna h1{
     text-align: center;
