--- a/estilos.css
+++ b/estilos.css
@@ -72,15 +72,20 @@ body{
     background-color: #04AA6D;
     color: white;
 }
+ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
 article{
     background: #e6e6fa;
     padding: 20px;
     margin-bottom: 15px;
 
 }
-time{
-    color: #999;
-    text-align: right;
+div .fecha_hora{
+    color: black;
+    text-align: left;
 }
 footer{
     background: white;
@@ -90,13 +95,6 @@ footer{
 article footer{
     text-align: right;
     margin-top: 20px;
-}
-article img{
-    width: 300px;
-    height: 400px;
-    display: block;
-    margin: 20px auto;
-    
 }
 .seccion{
     margin: 20px;
@@ -135,7 +133,6 @@ article img{
     padding: 20px;
     background: #34495e;
     color: white;
-
 }
 p{
     margin-top: 20px;
@@ -144,6 +141,7 @@ p{
     width: 300px;
     height: 400px;
     border: 3px solid red;
+    margin-bottom: 10px;
 }
 .descripcion{
     text-align: justify;
@@ -152,9 +150,5 @@ p{
     font-size: 15px;
     margin-top: 0px;
     padding-top: 0px;
+
 }
-ul{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
